# pystream-rs

./: .gitignore  README.md  pyproject.toml
src/rust/pystream-rs/: Cargo.toml  pyproject.toml
src/rust/pystream-rs/src/: lib.rs
