[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pystream-rs"
version = "0.0.1"
description = "Streaming interfaces using highly optimized I/O with Rust bindings to Python"
authors = ["Nikolas Achatz <nik.achatz@gmail.com>"]
packages = [{ include = "pystream-rs", from = "src/python" }]

[tool.black]
target-version = ["py312"]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
follow_imports = "skip"

[tool.poetry.dependencies]
python = "^3.112"
setuptools = "^58.0.0" 

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
prospector = "*"
types-requests = "*" 

